src/com/nlbuescher/dictionarywriter/parser/EntryParser.java
// Generated from Entry.g4 by ANTLR 4.5.3
package com.nlbuescher.dictionarywriter.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EntryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WhiteSpace=1, End=2, Indent=3, Newline=4, Number=5, DefinitionLabel=6, 
		Heading=7, Pronunciation=8, Grammar=9, Form=10, DefinitionGroupHeading=11, 
		Definition=12, SubDefinition=13, SubEntryLabel=14, SubEntryText=15, SubEntryListItem=16, 
		Note=17, ExampleText=18, ExampleTranslation=19;
	public static final int
		RULE_d_entry = 0, RULE_headGroup = 1, RULE_heading = 2, RULE_pronunciationGroup = 3, 
		RULE_pronunciation = 4, RULE_entryGroup = 5, RULE_entry = 6, RULE_grammarGroup = 7, 
		RULE_grammer = 8, RULE_formGroup = 9, RULE_form = 10, RULE_definitionGroup = 11, 
		RULE_definitionGroupHeading = 12, RULE_definition = 13, RULE_exampleGroup = 14, 
		RULE_example = 15, RULE_exampleText = 16, RULE_exampleTranslation = 17, 
		RULE_subDefinitionGroup = 18, RULE_subDefinition = 19, RULE_subEntryGroup = 20, 
		RULE_subEntry = 21, RULE_subEntryList = 22, RULE_subEntryListItem = 23, 
		RULE_noteGroup = 24, RULE_note = 25;
	public static final String[] ruleNames = {
		"d_entry", "headGroup", "heading", "pronunciationGroup", "pronunciation", 
		"entryGroup", "entry", "grammarGroup", "grammer", "formGroup", "form", 
		"definitionGroup", "definitionGroupHeading", "definition", "exampleGroup", 
		"example", "exampleText", "exampleTranslation", "subDefinitionGroup", 
		"subDefinition", "subEntryGroup", "subEntry", "subEntryList", "subEntryListItem", 
		"noteGroup", "note"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WhiteSpace", "End", "Indent", "Newline", "Number", "DefinitionLabel", 
		"Heading", "Pronunciation", "Grammar", "Form", "DefinitionGroupHeading", 
		"Definition", "SubDefinition", "SubEntryLabel", "SubEntryText", "SubEntryListItem", 
		"Note", "ExampleText", "ExampleTranslation"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Entry.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EntryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class D_entryContext extends ParserRuleContext {
		public HeadGroupContext headGroup() {
			return getRuleContext(HeadGroupContext.class,0);
		}
		public EntryGroupContext entryGroup() {
			return getRuleContext(EntryGroupContext.class,0);
		}
		public D_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterD_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitD_entry(this);
		}
	}

	public final D_entryContext d_entry() throws RecognitionException {
		D_entryContext _localctx = new D_entryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_d_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_la = _input.LA(1);
			if (_la==Heading) {
				{
				setState(52);
				headGroup();
				}
			}

			setState(56);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Grammar) | (1L << DefinitionGroupHeading) | (1L << Definition))) != 0)) {
				{
				setState(55);
				entryGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadGroupContext extends ParserRuleContext {
		public HeadingContext heading() {
			return getRuleContext(HeadingContext.class,0);
		}
		public PronunciationGroupContext pronunciationGroup() {
			return getRuleContext(PronunciationGroupContext.class,0);
		}
		public HeadGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterHeadGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitHeadGroup(this);
		}
	}

	public final HeadGroupContext headGroup() throws RecognitionException {
		HeadGroupContext _localctx = new HeadGroupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_headGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			heading();
			setState(60);
			_la = _input.LA(1);
			if (_la==Indent || _la==Pronunciation) {
				{
				setState(59);
				pronunciationGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadingContext extends ParserRuleContext {
		public TerminalNode Heading() { return getToken(EntryParser.Heading, 0); }
		public HeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_heading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitHeading(this);
		}
	}

	public final HeadingContext heading() throws RecognitionException {
		HeadingContext _localctx = new HeadingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_heading);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(Heading);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PronunciationGroupContext extends ParserRuleContext {
		public List<PronunciationContext> pronunciation() {
			return getRuleContexts(PronunciationContext.class);
		}
		public PronunciationContext pronunciation(int i) {
			return getRuleContext(PronunciationContext.class,i);
		}
		public List<TerminalNode> Indent() { return getTokens(EntryParser.Indent); }
		public TerminalNode Indent(int i) {
			return getToken(EntryParser.Indent, i);
		}
		public PronunciationGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pronunciationGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterPronunciationGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitPronunciationGroup(this);
		}
	}

	public final PronunciationGroupContext pronunciationGroup() throws RecognitionException {
		PronunciationGroupContext _localctx = new PronunciationGroupContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pronunciationGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				_la = _input.LA(1);
				if (_la==Indent) {
					{
					setState(64);
					match(Indent);
					}
				}

				setState(67);
				pronunciation();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Indent || _la==Pronunciation );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PronunciationContext extends ParserRuleContext {
		public TerminalNode Pronunciation() { return getToken(EntryParser.Pronunciation, 0); }
		public PronunciationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pronunciation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterPronunciation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitPronunciation(this);
		}
	}

	public final PronunciationContext pronunciation() throws RecognitionException {
		PronunciationContext _localctx = new PronunciationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pronunciation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(Pronunciation);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryGroupContext extends ParserRuleContext {
		public List<EntryContext> entry() {
			return getRuleContexts(EntryContext.class);
		}
		public EntryContext entry(int i) {
			return getRuleContext(EntryContext.class,i);
		}
		public EntryGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entryGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterEntryGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitEntryGroup(this);
		}
	}

	public final EntryGroupContext entryGroup() throws RecognitionException {
		EntryGroupContext _localctx = new EntryGroupContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_entryGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				entry();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Grammar) | (1L << DefinitionGroupHeading) | (1L << Definition))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryContext extends ParserRuleContext {
		public GrammarGroupContext grammarGroup() {
			return getRuleContext(GrammarGroupContext.class,0);
		}
		public List<DefinitionGroupContext> definitionGroup() {
			return getRuleContexts(DefinitionGroupContext.class);
		}
		public DefinitionGroupContext definitionGroup(int i) {
			return getRuleContext(DefinitionGroupContext.class,i);
		}
		public SubEntryGroupContext subEntryGroup() {
			return getRuleContext(SubEntryGroupContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitEntry(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_entry);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if (_la==Grammar) {
				{
				setState(79);
				grammarGroup();
				}
			}

			setState(83); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82);
					definitionGroup();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(88);
			_la = _input.LA(1);
			if (_la==SubEntryLabel) {
				{
				setState(87);
				subEntryGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarGroupContext extends ParserRuleContext {
		public GrammerContext grammer() {
			return getRuleContext(GrammerContext.class,0);
		}
		public FormGroupContext formGroup() {
			return getRuleContext(FormGroupContext.class,0);
		}
		public GrammarGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterGrammarGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitGrammarGroup(this);
		}
	}

	public final GrammarGroupContext grammarGroup() throws RecognitionException {
		GrammarGroupContext _localctx = new GrammarGroupContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_grammarGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			grammer();
			setState(92);
			_la = _input.LA(1);
			if (_la==Form) {
				{
				setState(91);
				formGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammerContext extends ParserRuleContext {
		public TerminalNode Grammar() { return getToken(EntryParser.Grammar, 0); }
		public GrammerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterGrammer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitGrammer(this);
		}
	}

	public final GrammerContext grammer() throws RecognitionException {
		GrammerContext _localctx = new GrammerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_grammer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(Grammar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormGroupContext extends ParserRuleContext {
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public FormGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterFormGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitFormGroup(this);
		}
	}

	public final FormGroupContext formGroup() throws RecognitionException {
		FormGroupContext _localctx = new FormGroupContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96);
				form();
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Form );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public TerminalNode Form() { return getToken(EntryParser.Form, 0); }
		public PronunciationGroupContext pronunciationGroup() {
			return getRuleContext(PronunciationGroupContext.class,0);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitForm(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(Form);
			setState(103);
			_la = _input.LA(1);
			if (_la==Indent || _la==Pronunciation) {
				{
				setState(102);
				pronunciationGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionGroupContext extends ParserRuleContext {
		public DefinitionGroupHeadingContext definitionGroupHeading() {
			return getRuleContext(DefinitionGroupHeadingContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterDefinitionGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitDefinitionGroup(this);
		}
	}

	public final DefinitionGroupContext definitionGroup() throws RecognitionException {
		DefinitionGroupContext _localctx = new DefinitionGroupContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_definitionGroup);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if (_la==DefinitionGroupHeading) {
				{
				setState(105);
				definitionGroupHeading();
				}
			}

			setState(109); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(108);
					definition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(111); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionGroupHeadingContext extends ParserRuleContext {
		public TerminalNode DefinitionGroupHeading() { return getToken(EntryParser.DefinitionGroupHeading, 0); }
		public DefinitionGroupHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionGroupHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterDefinitionGroupHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitDefinitionGroupHeading(this);
		}
	}

	public final DefinitionGroupHeadingContext definitionGroupHeading() throws RecognitionException {
		DefinitionGroupHeadingContext _localctx = new DefinitionGroupHeadingContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_definitionGroupHeading);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(DefinitionGroupHeading);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TerminalNode Definition() { return getToken(EntryParser.Definition, 0); }
		public ExampleGroupContext exampleGroup() {
			return getRuleContext(ExampleGroupContext.class,0);
		}
		public SubDefinitionGroupContext subDefinitionGroup() {
			return getRuleContext(SubDefinitionGroupContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(Definition);
			setState(117);
			_la = _input.LA(1);
			if (_la==ExampleText) {
				{
				setState(116);
				exampleGroup();
				}
			}

			setState(120);
			_la = _input.LA(1);
			if (_la==SubDefinition) {
				{
				setState(119);
				subDefinitionGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleGroupContext extends ParserRuleContext {
		public List<ExampleContext> example() {
			return getRuleContexts(ExampleContext.class);
		}
		public ExampleContext example(int i) {
			return getRuleContext(ExampleContext.class,i);
		}
		public ExampleGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exampleGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterExampleGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitExampleGroup(this);
		}
	}

	public final ExampleGroupContext exampleGroup() throws RecognitionException {
		ExampleGroupContext _localctx = new ExampleGroupContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_exampleGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				example();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ExampleText );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleContext extends ParserRuleContext {
		public ExampleTextContext exampleText() {
			return getRuleContext(ExampleTextContext.class,0);
		}
		public ExampleTranslationContext exampleTranslation() {
			return getRuleContext(ExampleTranslationContext.class,0);
		}
		public ExampleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_example; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterExample(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitExample(this);
		}
	}

	public final ExampleContext example() throws RecognitionException {
		ExampleContext _localctx = new ExampleContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_example);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			exampleText();
			setState(129);
			_la = _input.LA(1);
			if (_la==ExampleTranslation) {
				{
				setState(128);
				exampleTranslation();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleTextContext extends ParserRuleContext {
		public TerminalNode ExampleText() { return getToken(EntryParser.ExampleText, 0); }
		public ExampleTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exampleText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterExampleText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitExampleText(this);
		}
	}

	public final ExampleTextContext exampleText() throws RecognitionException {
		ExampleTextContext _localctx = new ExampleTextContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_exampleText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ExampleText);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleTranslationContext extends ParserRuleContext {
		public TerminalNode ExampleTranslation() { return getToken(EntryParser.ExampleTranslation, 0); }
		public ExampleTranslationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exampleTranslation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).enterExampleTranslation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EntryListener ) ((EntryListener)listener).exitExampleTranslation(this);
		}
	}

	public final ExampleTranslationContext exampleTranslation() throws RecognitionException {
		ExampleTranslationContext _localctx = new ExampleTranslationContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_exampleTranslation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ExampleTranslation);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
